--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 @font-face {
   font-family: "Charm_regular";
   src: url("src/assets/fonts/Charm/Charm-Regular.ttf") format("truetype");
