--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,23 @@
   --font-tile-bold: "Charm_bold", cursive;
   --font-body: "Roboto_Flex", sans-serif;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background: gray;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: white;
+  border-radius: 10px;
+  border: 3px solid black;
+}
+
+/* Firefox */
+body {
+  scrollbar-width: thin;
+  scrollbar-color: #888 black;
+}
