--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@
 }
 
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-track {
@@ -31,7 +31,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: white;
+  background-color: black;
   border-radius: 10px;
   border: 3px solid black;
 }
@@ -40,4 +40,9 @@
 body {
   scrollbar-width: thin;
   scrollbar-color: #888 black;
+}
+
+p {
+  font-family: var(--font-body);
+  font-size: 1.2rem;
 }
