--- a/src/index.css
+++ b/src/index.css
@@ -31,15 +31,15 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: black;
+  background-color: rgba(123, 75, 255, 0.767);
   border-radius: 10px;
-  border: 3px solid black;
+  border: 3px solid rgba(123, 75, 255, 0.767);
 }
 
 /* Firefox */
 body {
   scrollbar-width: thin;
-  scrollbar-color: #888 black;
+  scrollbar-color: #888 rgba(123, 75, 255, 0.767);
 }
 
 p {
